--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "author": "segs",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "firebase-admin": "^12.7.0"
-  }
+    "node-fetch": "^2.7.0",
+    "pdf-lib": "^1.17.1",
+    "wkhtmltopdf": "^0.4.0"
+  },
+  "keywords": []
 }
